Devops-eval/d4-kubernetes/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-eval-ingress
  namespace: devops-eval
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: devops-eval.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-eval-svc
                port:
                  number: 80
